# my_home_smart

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md
releases/v0.1.0/: README.md  SHA256SUMS.txt
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/future/: automation.rs  local_api.rs  mod.rs  scheduler.rs
src-tauri/src/models/: app.rs  mod.rs  tuya.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/tuya/: auth.rs  http_client.rs  mod.rs  normalizer.rs  service.rs  signing.rs
src/components/: actionLog.ts  configPanel.ts  deviceCard.ts  deviceGrid.ts  header.ts  icons.ts  toastStack.ts
src/pages/: appShell.ts
src/services/: tauriApi.ts
src/stores/: appStore.test.ts  appStore.ts
src/styles/: app.css
src/types/: models.ts
src/utils/: deviceFilters.test.ts  deviceFilters.ts  escape.ts  format.ts
