[package]
name = "tuya_desk_controller"
version = "0.1.0"
description = "Minimal desktop controller for Tuya light switches"
authors = ["Codex"]
edition = "2021"

[lib]
name = "tuya_desk_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time"] }
